--- a/css/usuario_comerciante.css
+++ b/css/usuario_comerciante.css
@@ -5,16 +5,19 @@ body {
 html {
     margin-top: -1%;
 }
-
-header {
+header{
+    margin-top: -7%;
+}
+.heade{
     background: transparent;
     position: static;
     width: 100%;
-    height: 0%;
-    position: fixed;
+    height: 100%;
+  
     z-index: 100;
-    margin-top: 0%;
+    margin-top: 8%;
 }
+
 
 h3 {
     font-weight: 1;
@@ -23,7 +26,7 @@ h3 {
 
 .ContenidoAlineado {
     display: flex;
-    margin-left: 8%;
+    margin-left: 10%;
     align-items: center;
     justify-content: center;
     gap: 100px;
@@ -91,7 +94,7 @@ h3 {
 
 .Cuestionario label {
     color: rgba(27, 27, 27, 0.779);
-    font-size: 30px;
+    font-size: 40px;
     margin-top: 5%;
     display: inline-block;
     margin-right: 10%;
@@ -101,11 +104,11 @@ h3 {
 
 .Cuestionario select{
     color: rgba(27, 27, 27, 0.779);
-    font-size: 25px;
+    font-size: 40px;
     padding: 10px;
     margin-top: -150px;
     margin-right: -74%;
-    border-radius: 30px;
+    border-radius: 40px;
     margin-left: -8%;
     display: inline-block; /* Cambiado a inline-block */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -116,7 +119,7 @@ h3 {
     border-color: #CC2B9E;
 }
 .h5{
-    font-size: 25px;
+    font-size: 30px;
     color:#303030 ;
   }
 
@@ -176,7 +179,7 @@ textarea {
     border: 1px solid #ddd;
     background-color: #e7e7e7;
     margin-left: -8%;
-    height: 70px;
+    height: 80px;
 }
 .select{
     width: 170%;
@@ -208,7 +211,7 @@ textarea:focus {
 .img{
     margin-left: 100%;
     margin-top: -20%;
-    width: 130px;
+    width: 150px;
 }
 .row2 label{
     margin-top: -23%;
@@ -222,36 +225,37 @@ textarea:focus {
     display: none;
 }
 
-.container {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    position: absolute;
-    left: 760px;
-    top: 1820px;
-    width: 370px;
-    height: 20px;
-    background: #fff;
-    margin-top: 20%;
-    color:#303030 ;
-}
-
-.checkbox-label {
+.Terminos {
+    color: rgb(59, 59, 59);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 1.3vw;
-    font-weight: 300;
-    position: absolute;
-    margin-left: 30px;
-    margin-top: 0px;
-    white-space: nowrap;
-    overflow: hidden;
+    font-size: 30px;
+    margin-top: 15%;
+    text-align: center;
 }
 
-.checkbox-input {
-    transform: scale(2.0);
-    margin-right: 10px;
+.Terminos input[type="checkbox"] {
+    display: none;
+}
+
+.Terminos label {
+    position: relative;
+    padding-left: 45px;
     cursor: pointer;
-    fill: #CC2B9E;
+}
+
+.Terminos label::before {
+    background-color: #D9D9D9;
+    content: '';
+    position: absolute;
+    left: -10%;
+    top: -30%;
+    width: 60px;
+    height: 60px;
+    border-radius: 15%;
+}
+
+.Terminos input[type="checkbox"]:checked+label::before {
+    background-color: #EF5036;
 }
 
 .Boton {
@@ -264,11 +268,12 @@ textarea:focus {
     margin: 42%;
     text-align: center;
     border: none;
-    margin-top: 16%;
+    margin-top: 2%;
     text-decoration: none;
     transition-duration: 0.4s;
     cursor: pointer;
     margin-block-end: 10%;
+    margin-inline-end: 1%;
 }
 
 .Boton:hover {
