--- a/css/usuario_estudiante.css
+++ b/css/usuario_estudiante.css
@@ -4,14 +4,17 @@ body{
 html{
     margin-top: -1%;
 }
-header {
+header{
+    margin-top: -7%;
+}
+.heade{
     background: transparent;
     position: static;
     width: 100%;
     height: 100%;
-    position: fixed;
+  
     z-index: 100;
-    margin-top: 0%;
+    margin-top: 8%;
 }
 
 h3 {
