--- a/css/usuario_comerciante.css
+++ b/css/usuario_comerciante.css
@@ -303,6 +303,13 @@ textarea:focus {
     background-color: transparent;
     border: 0px solid transparent;
     font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+
+.lista a{
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
 }
 
 .lista li {
