--- a/css/actividades_u.css
+++ b/css/actividades_u.css
@@ -137,6 +137,8 @@ h3 {
     display: flex;
     align-items: center;
     cursor: pointer;
+    height: 60px;
+    width: 140px;
 }
 
 .BotonUni img {
