--- a/css/est-com login.css
+++ b/css/est-com login.css
@@ -46,7 +46,7 @@ a:hover {
   padding: 0px;
   margin: 0%;
   height: 3px;
-  background-color: #ffffff;
+  background-color: transparent;
   border: none;
 }
 
