--- a/css/Beneficios.css
+++ b/css/Beneficios.css
@@ -4,14 +4,15 @@
     align-items: center;
     justify-content: center;
     gap: 160px;
-    padding-top: 100px;
-    
+    padding-top: 120px;
 }
-.icon{
-font-size: 1500%;
-color: white;
-padding-left: 0.1%;
+
+.icon {
+    font-size: 1500%;
+    color: white;
+    padding-left: 0.1%;
 }
+
 .Linea {
     width: 0.5%;
     height: 380px;
@@ -34,3 +35,8 @@ padding-left: 0.1%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.Iframe {
+    width: 100%;
+    margin-top: 5%;
+    margin-block-end: -2%;
+}
