--- a/css/revista.css
+++ b/css/revista.css
@@ -28,7 +28,7 @@ body {
 }
 
 #slider {
-    margin: auto;
+    margin:auto;
     background-color: white;
     max-width: 700px;
     width: 100%;
@@ -73,7 +73,7 @@ li {
 
 #slider>ul.slider li img {
     width: 100%;
-    height: 300px;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -179,5 +179,20 @@ li {
 
 #slider > .menu li a.selected {
     background-color: #1895A0; 
+}
+.slide-button{
+    position:absolute; 
+    top: 530px; 
+    right: 1220px;
+}
+.slide-button2{
+    position:absolute; 
+    top: 560px; 
+    right: 1220px;
+}
+.slide-button3{
+    position:absolute; 
+    top: 590px; 
+    right: 1220px;
 }
 
