--- a/css/usuario_estudiante.css
+++ b/css/usuario_estudiante.css
@@ -11,7 +11,7 @@ header {
     height: 100%;
     position: fixed;
     z-index: 100;
-    margin-top: 0%;
+    margin-top: 1%;
 }
 
 h3 {
@@ -30,7 +30,7 @@ h3 {
 
 .ContenidoAlineado2 {
     display: flex;
-    margin-left: -15%;
+    margin-left: -25%;
     align-items: center;
     justify-content: center;
     gap: 100px;
@@ -106,6 +106,11 @@ h3 {
     font-size: 20px;
     font-weight: bold;
 }
+.Iframe {
+    width: 100%;
+    margin-top: -45%;
+    margin-block-end: 0%;
+}
 
 /* MENU */
 
@@ -113,6 +118,7 @@ h3 {
     position: absolute;
     display: inline-block;
     margin-left: 95%;
+    margin-top: 5%;
 }
 
 .imagen {
