--- a/css/registrate.css
+++ b/css/registrate.css
@@ -250,6 +250,7 @@ body {
 }
 
 .checkbox-label {
+    display: flex;
     font-family: 'Lato', sans-serif;
     font-size: 1.3vw;
     font-weight: 300;
@@ -303,4 +304,7 @@ body {
     color: #EF5036;
 }
 .boton-enviar{
+display: flex;
+margin-left: 28%;
+    font-size: 40px;
 }
