--- a/css/comercio.css
+++ b/css/comercio.css
@@ -122,38 +122,51 @@
       border-color: #CC2B9E;
     }
   
-    .Terminos {
-      color: rgb(59, 59, 59);
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      font-size: 25px;
-      margin-top: 8%;
-      text-align: center;
-    }
-  
-    .Terminos input[type="checkbox"] {
-      display: none;
-    }
-  
-    .Terminos label {
-      position: relative;
-      padding-left: 45px;
-      cursor: pointer;
-    }
-  
-    .Terminos label::before {
-      background-color: #D9D9D9;
-      content: '';
+    .container {
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
       position: absolute;
-      left: -10%;
-      top: -40%;
-      width: 55px;
-      height: 55px;
-      border-radius: 15%;
-    }
+      left: 760px;
+      top: 1700px;
+      width: 370px;
+      height: 20px;
+      background: #fff;
+      margin-top: 21%;
+  }
   
-    .Terminos input[type="checkbox"]:checked+label::before {
-      background-color: #EF5036;
-    }
+  .checkbox-label {
+      font-family: 'Lato', sans-serif;
+      font-size: 1.3vw;
+      font-weight: 300;
+      position: absolute;
+      margin-left: 30px;
+      margin-top: 0px;
+      white-space: nowrap;
+      overflow: hidden;
+  }
+  
+  .checkbox-input {
+      transform: scale(2.0);
+      margin-right: 10px;
+      cursor: pointer;
+  }
+  
+  .custom-select {
+      border-radius: 10px;
+      padding: 11px;
+      width: 967px;
+      margin: 10px;
+      background-color: #f2f2f2;
+      color: #2D9AA6;
+      border: none;
+  }
+  
+  
+  .custom-select option { /* Estilo para los opciones del select */
+      background-color: #f2f2f2;
+      color: #1e7781;
+  }
   
     .Boton {
       background-color: #EF5036;
@@ -165,6 +178,6 @@
       margin: 42%;
       text-align: center;
       border: none;
-      margin-top: 4%;
+      margin-top: 8%;
       margin-block-end: 5%;
     }
