--- a/css/registrate.css
+++ b/css/registrate.css
@@ -38,7 +38,10 @@ body {
     left: 40px;
 
 }
-
+.archivopng{
+    width: 70px;
+    height: ;
+}
 .subtitulo {
     font-family: 'Lato', sans-serif;
     text-align: left;
